--- a/webroot/mobile/css/style.css
+++ b/webroot/mobile/css/style.css
@@ -751,7 +751,8 @@ border-radius: 50%;}
 .h-home-menulist li:last-of-type{border-bottom:none;}
 /*个人主页3*/
 .m_top_des{padding:.4rem .3rem; overflow:hidden;font-size: .24rem;}
-.m_left-pic{width:1.34rem;height:1.34rem;border-radius: 50%;overflow:hidden;}
+.m_left-pic{width:1.34rem;height:1.34rem;border-radius: 50%;position:relative;}
+.bgb_vip{position: absolute;background: url(img/v.png) no-repeat;width:.3rem;height:.3rem;background-size: cover;right:.1rem;bottom:0;}
 .m_left-pic img{width:100%;height:1.34rem;display: block;}
 .m_center_des{padding-top:.1rem;margin-left:.15rem;width:50%;}
 .wraper .w75{width:75%;}
