--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -13,42 +13,48 @@ header h1.logintitle{background: url(icon/allbgs.png) no-repeat 0 -175px;height:
 .home_title{background: url(icon/allbgs.png) no-repeat -606px 0;display: block;width:74px;margin:0 auto;height:28px;}
 .quit_login{position:absolute;right:0;top:3px;}
 .home_user_info{padding:31px 0 24px;}
-.home_user_info .imginfo{/*background: url(icon/allbgs.png) no-repeat -782px -5px;*/ width:76px;height:75px;display: inline-block;margin-left:-6px;vertical-align: middle;overflow: hidden;}
-.home_user_info a.mobilenum{color:#fff;font-size:18px;margin-left:14px;}
+.home_user_info .imginfo{/*background: url(icon/allbgs.png) no-repeat -782px -5px;*/ width:76px;height:75px;display: inline-block;margin-left:-6px;vertical-align: top;overflow: hidden;}
+.home_head_info{font-size:18px;margin-left:14px;display: inline-block;padding-top:15px;}
+.home_head_info h1{line-height: 26px;}
+.home_head_info h1 {background: url(icon/allbgs.png) no-repeat -841px -336px; padding-left:30px;}
+.home_user_info .mobilenum{color:#fff;}
 .itemtitle{height:40px;line-height: 40px;border-bottom:1px #ddd solid;}
 .item_title_r_name{color:#525151;}
 .home_item{}
 .itemtitle .more{font-size: 12px;background: url(icon/allbgs.png) no-repeat  60px -259px;width:70px;}
-.items_con dl{float:left;width:33%;text-align: center;padding-top:10px;border-right:1px #dedede solid;padding-bottom:10px;}
+.items_con dl{float:left;width:33%;text-align: center;padding-top:10px;border-right:1px #dedede solid;padding-bottom:10px;border-bottom:1px #dedede solid;}
 .items_con dl:nth-of-type(3n){border-right:1px transparent solid;}
 .items_con dl dt{width:76%;margin:0 auto;margin-bottom:8px;}
 .items_con dl dt img{width:100%;display: block;height:auto;}
 .items_con dl dd{font-size: 10px;margin-bottom:3px;}
 .items_price{color:#ff6c4a;}
-.items_con{overflow: hidden;border-bottom:1px #dedede solid;background: #fff;}
+.items_con{overflow: hidden;background: #fff;min-height:130px;}
 .home_infolist{overflow: hidden;border-top:1px #dedede solid;}
 .home_infolist span{background: url(icon/allbgs.png) no-repeat 0 -437px;padding-left:40px;color:#525151}
 .home_infolist i{background: url(icon/allbgs.png) no-repeat 0 -100px;width:12px;height:40px;}
 .home_infolist span.change{background-position: 0px -327px;}
 .home_infolist span.bind{background-position: 0px -512px;}
 .home_top_con{background: #fff;height:48px;line-height: 48px;background: #fff;}
+/*兑换*/
+.home_exchange{margin-top:10px;}
+.home_exchange .title{color:#fdb245;font-size:16px;}
+.home_exchange .con{overflow:hidden;}
+.home_exchange .home_select_type{float:left;width:48%;line-height: 20px;margin-top:10px;margin-right:10px;}
+.home_exchange .home_select_type:nth-of-type(2n){margin-right:0;}
+.home_select_type select{width:60%;border:1px #e5e5e5 solid;}
+.home_select_type span{}
+.home_select_type input{border:1px #e5e5e5 solid;width:60%;line-height: 18px;}
+@media only screen and (max-width: 374px) {
+	.home_exchange .home_select_type{width:100%;}
+	.home_select_type .cm{letter-spacing: 13px;}
+}
 /*.home_infolist .current i{background-position:0 -35px;}
 .home_infolist .downcon{font-size: 14px;max-height:999px;transition: all .3s ease;}*/
 .changeinfo{width:76%;}
 
 /*.home_infolist .upcon{max-height: 0;transition: all .5s ease;}*/
 .changeinfo .point{color:#919191;width:65%;text-align: center;height:35px;line-height: 35px;border-bottom:1px #ccc solid;}
-.changeinfo .submitbtn{display: inline-block;background: #ff7564;padding:0 25px;border-radius: 10px;color:#fff;margin-left:10px;height:32px;line-height: 32px;}
-@media (min-width: 320px) and (max-width: 374px) {
-	.changeinfo{width:73%;font-size:12px;}
-	.changeinfo .point{width:78%;}
-	.changeinfo .submitbtn{margin-left:5px; padding:0 5px;}
-}
-@media (min-width: 375px) and (max-width: 413px) {
-	.changeinfo{width:73%;font-size:12px;}
-	.changeinfo .point{width:74%;}
-	.changeinfo .submitbtn{margin-left:5px; padding:0 15px;}
-}
+.home_exchange .submitbtn{display: inline-block;background: #ff7564;width:88px;text-align:center;color:#fff;margin:15px auto 0;height:35px;line-height: 35px;}
 .ct .title h3{font-size:12px;height:48px;line-height: 48px;overflow: hidden;}
 .ct .title{border-bottom:1px #d5d5d5 solid;}
 .ct .title h3 span{font-size: 15px;display: inline-block;width:120px;background: url(icon/allbgs.png) no-repeat -230px -185px;padding-left:27px;}
