--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -41,9 +41,9 @@ header h1.logintitle{background: url(icon/allbgs.png) no-repeat 0 -175px;height:
 .home_exchange .con{overflow:hidden;}
 .home_exchange .home_select_type{float:left;width:100%;line-height: 20px;margin-top:10px;margin-right:10px;}
 .home_exchange .home_select_type:nth-of-type(2n){margin-right:0;}
-.home_select_type select{width:80%;border:1px #e5e5e5 solid;padding-left: 1rem;}
+.home_select_type select{width:80%;border:1px #e5e5e5 solid;margin-left: 1rem;}
 .home_select_type span{}
-.home_select_type input{border:1px #e5e5e5 solid;width:80%;line-height: 18px;padding-left: 1rem;}
+.home_select_type input{border:1px #e5e5e5 solid;width:80%;line-height: 18px;margin-left: 1rem;}
 @media only screen and (max-width: 374px) {
 	.home_exchange .home_select_type{width:100%;}
 	.home_select_type .cm{letter-spacing: 13px;}
