--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -1,5 +1,5 @@
 header{background: #29bbb1;width:100%;max-width: 720px;margin:0 auto;padding:14px 0;border-bottom:1px #f0f0f0 solid;}
-header h1{text-align: center;color:#fff;font-size:16px;}
+header h1{text-align: center;color:#fff;font-size:16px;height:30px;}
 header h1.logintitle{background: url(icon/allbgs.png) no-repeat 0 -175px;}
 .login_box{padding-top:13px;font-size:15px;}
 .login_box li{margin-top:15px;height:45px;line-height: 43px;border:1px #ddd solid;background: #fff;text-indent: 12px;}
@@ -15,7 +15,7 @@ header h1.logintitle{background: url(icon/allbgs.png) no-repeat 0 -175px;}
 .home_user_info{padding:31px 0 24px;}
 .home_user_info .imginfo{/*background: url(icon/allbgs.png) no-repeat -782px -5px;*/ width:76px;height:75px;display: inline-block;margin-left:-6px;vertical-align: top;overflow: hidden;}
 .home_head_info{font-size:18px;margin-left:14px;display: inline-block;padding-top:15px;}
-.home_head_info h1{line-height: 26px;height:26px;}
+.home_head_info h1{line-height: 26px;}
 .home_head_info h1 {background: url(icon/allbgs.png) no-repeat -841px -336px;}
 .home_user_info .mobilenum{color:#fff;}
 .itemtitle{height:40px;line-height: 40px;border-bottom:1px #ddd solid;}
