--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -9,14 +9,14 @@ header h1.logintitle{background: url(icon/allbgs.png) no-repeat 0 -175px;}
 .btn{width:100%;display: block;text-align: center;color:#fff;font-size:15px;height:41px;line-height: 41px;}
 /*主页*/
 .quit_login{color:#fff;font-size:14px;}
-.home_head{position:relative;height:28px;}
+.home_head{position:relative;height:28px;line-height: 28px;}
 .home_title{background: url(icon/allbgs.png) no-repeat -606px 0;display: block;width:74px;margin:0 auto;height:28px;}
-.quit_login{position:absolute;right:0;top:3px;}
+.quit_login{position:absolute;right:0;}
 .home_user_info{padding:31px 0 24px;}
 .home_user_info .imginfo{/*background: url(icon/allbgs.png) no-repeat -782px -5px;*/ width:76px;height:75px;display: inline-block;margin-left:-6px;vertical-align: top;overflow: hidden;}
 .home_head_info{font-size:18px;margin-left:14px;display: inline-block;padding-top:15px;}
 .home_head_info h1{line-height: 26px;}
-.home_head_info h1 {background: url(icon/allbgs.png) no-repeat -841px -336px;}
+.home_head_info h1 {background: url(icon/allbgs.png) no-repeat -837px -292px;}
 .home_user_info .mobilenum{color:#fff;}
 .itemtitle{height:40px;line-height: 40px;border-bottom:1px #ddd solid;}
 .item_title_r_name{color:#525151;}
