--- a/webroot/mobile/html/jifen/css/basic.css
+++ b/webroot/mobile/html/jifen/css/basic.css
@@ -42,6 +42,7 @@ input::-webkit-input-placeholder { /* WebKit browsers */ color: #b5b5b5; }
 /*间隙*/
 .mt33{margin-top:33px;}
 .mt25{margin-top:25px;}
-.mb10{margin-bottom:10px;}
-.mt10{margin-top:10px;}
+.mb5{margin-bottom:5px;}
+.mt5{margin-top:5px;}
 .btop{border-top: 1px #d5d5d5 solid;}
+.fz16{font-size: 16px;}
