--- a/webroot/mobile/html/jifen/css/basic.css
+++ b/webroot/mobile/html/jifen/css/basic.css
@@ -46,3 +46,4 @@ input::-webkit-input-placeholder { /* WebKit browsers */ color: #b5b5b5; }
 .mt5{margin-top:5px;}
 .btop{border-top: 1px #d5d5d5 solid;}
 .fz16{font-size: 16px;}
+.fz14{font-size: 14px;}
