--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -23,7 +23,7 @@ background-size:20px 20px;}
 .item_title_r_name{color:#525151;}
 .home_item{}
 .itemtitle .more{font-size: 15px;background: url(icon/more.png) no-repeat  right center;width:80px;background-size:auto 12px;}
-.items_con dl{float:left;width:33%;text-align: center;padding-top:12px;border-right:1px #dedede solid;padding-bottom:3px;border-bottom:1px #dedede solid;}
+.items_con dl{float:left;width:33.3%;text-align: center;padding-top:10px;border-right:1px #dedede solid;padding-bottom:10px;border-bottom:1px #dedede solid;}
 .items_con dl:nth-of-type(3n){border-right:1px transparent solid;}
 .items_con dl dt{width:76%;margin:0 auto;margin-bottom:6px;min-height:53px;}
 .items_con dl dt img{width:100%;display: block;height:auto;}
@@ -65,9 +65,9 @@ background-size:18px 18px;padding-left:27px;}
 background-size:18px 18px;}
 .cmcc .title h3 span{background: url(icon/lt.png) no-repeat left center;
 background-size:18px 18px;}
-.ct .con li{padding:15px 0;border-bottom:1px #d5d5d5 solid;}
+.ct .con li{padding:15px 0;border-bottom:1px #d5d5d5 solid;padding-left:20px;font-size:0;}
 .ct .con span{display: inline-block;color:#545353;font-size:13px;vertical-align: top;max-width:55%;}
-.ct .con .get_gift{color:#fe8c5a;font-size:24px;padding-left:34px;width:130px;line-height: 35px;}
+.ct .con .get_gift{color:#fe8c5a;font-size:24px;width:120px;line-height: 35px;text-align: center;}
 .ct .con i{display: block;color:#8a8a8a;font-size: 12px;margin-top:5px;}
 .f_potion{position:fixed;width:100%;max-width:750px;margin:0 auto;bottom:0;background: #fff;}
 /*查询订单*/
