--- a/webroot/mobile/html/jifen/css/style.css
+++ b/webroot/mobile/html/jifen/css/style.css
@@ -66,7 +66,7 @@ background-size:18px 18px;}
 .cmcc .title h3 span{background: url(icon/lt.png) no-repeat left center;
 background-size:18px 18px;}
 .ct .con li{padding:15px 0;border-bottom:1px #d5d5d5 solid;padding-left:20px;font-size:0;}
-.ct .con span{display: inline-block;color:#545353;font-size:13px;vertical-align: top;max-width:55%;}
+.ct .con span{display: inline-block;color:#545353;font-size:13px;vertical-align: top;max-width:55%;word-break:break-all}
 .ct .con .get_gift{color:#fe8c5a;font-size:24px;width:120px;line-height: 35px;text-align: center;}
 .ct .con i{display: block;color:#8a8a8a;font-size: 12px;margin-top:5px;}
 .f_potion{position:fixed;width:100%;max-width:750px;margin:0 auto;bottom:0;background: #fff;}
@@ -98,7 +98,7 @@ max-width: 600px;}
 @media only screen and (max-width:340px ) {
 	.downcon .point{width:70%;}
 	.downcon .submitbtn{padding:2px 10px;margin-left:10px;}
-	.ct .title h3 span{width:95px;}
+	/*.ct .title h3 span{width:95px;}*/
 }
 @media only screen and (min-width:410px ) {
 	.downcon.point{width:55%;}
